# marine_presenter

./: .gitignore  CMakeLists.txt  README.md  package.xml
example/: marine-ppt-example.blg  marine-ppt-example.tex  marine-ppt-example.yaml
example/marine-ppt-example/: config.yaml  manual.yaml  presentation_launch.py
example/marine-ppt-example/mesh/: 1.osg  10.osg  11.osg  12.osg  13.osg  14.osg  15.osg  16.osg  17.osg  18.osg  19.osg  2.osg  3.osg  4.osg  5.osg  6.osg  7.osg  8.osg  9.osg
launch/: bringup_launch.py
objects/: islands.yaml  slides.xacro
objects/mesh/: blades.ive  pole.ive
objects/urdf/: bluerov.xacro  camera.urdf  turbine.xacro  yacht.xacro
scripts/: generate.py  presenter.py  publish_world_models.py  remote.py
srv/: ButtonPress.srv
templates/: manual.yaml  presentation_launch.py  slide.osg  slide2.osg
